--- a/index.html
+++ b/index.html
@@ -365,17 +365,17 @@
               </div>
             </div>
             <h4 style="text-align: center;"><a href="tel:+59521288900" target="_blank"> Contactos:</a></h4>
-           <div class="d-flex justify-content-around">
-              <a class="btn btn-primary" href="https://wa.me/595985394639" target="_blank" role="button">Informes y Consultas<br>0985 394 639</a>
-              <a class="btn btn-primary" href="https://wa.me/595972377691" target="_blank" role="button">Facultad de CC. JJ. y RR. II. <br>0972 377 691</a>
-          </div> <br>
-          <div class="d-flex justify-content-around">
-             <a class="btn btn-primary" href="https://wa.me/595972377691" target="_blank" role="button">Facultad de Gestión <br>0972 377 691</a>
-             <a class="btn btn-primary" href="https://wa.me/5950991850396" target="_blank" role="button">Facultad de Ingeniería <br>0991 850 396</a>
-          </div><br>
-          <div class="d-flex justify-content-around">
-            <a class="btn btn-primary" href="https://wa.me/595972377695" target="_blank" role="button">Facultad de Salud <br>0985 394 639</a>
-         </div><br>
+           <div class="d-flex flex-column justify-content-around">
+              <a class="btn btn-primary" href="https://wa.me/595985394639" target="_blank" role="button" style="margin: 10px;">Informes y Consultas<br>0985 394 639</a>
+              <a class="btn btn-primary" href="https://wa.me/595972377691" target="_blank" role="button" style="margin: 10px;">Facultad de CC. JJ. y RR. II. <br>0972 377 691</a>
+          </div> 
+          <div class="d-flex flex-column justify-content-around">
+             <a class="btn btn-primary" href="https://wa.me/595972377691" target="_blank" role="button" style="margin: 10px;">Facultad de Gestión <br>0972 377 691</a>
+             <a class="btn btn-primary" href="https://wa.me/5950991850396" target="_blank" role="button" style="margin: 10px;">Facultad de Ingeniería <br>0991 850 396</a>
+          </div>
+          <div class="d-flex flex-column justify-content-around">
+            <a class="btn btn-primary" href="https://wa.me/595972377695" target="_blank" role="button" style="margin: 10px;">Facultad de Salud <br>0985 394 639</a>
+         </div>
 
         </div>
 
@@ -387,11 +387,10 @@
               </div>
             </div>
             <h4 style="text-align: center;"><a href="tel:+59561504351" target="_blank"> Contactos:</a></h4>
-           <div class="d-flex justify-content-around">
-             <a class="btn btn-primary" href="https://wa.me/595986541221" target="_blank" role="button">Informes y Consultas<br>0985 394 639</a>
-            <a class="btn btn-primary" href="https://wa.me/595992549755" target="_blank" role="button">Facultad de Salud <br>0985 394 639</a>
+           <div class="d-flex flex-column justify-content-around">
+             <a class="btn btn-primary" href="https://wa.me/595986541221" target="_blank" role="button" style="margin: 10px;">Informes y Consultas<br>0985 394 639</a>
+            <a class="btn btn-primary" href="https://wa.me/595992549755" target="_blank" role="button" style="margin: 10px;">Facultad de Salud <br>0985 394 639</a>
           </div>
-           
           </div>
 
           <div class="col-lg-4 col-md-12 portfolio-item filter-web">
@@ -403,9 +402,9 @@
             </div>
 
             <h4 style="text-align: center;"><a href="tel:+595981122452" target="_blank"> Contactos:</a></h4>
-            <div class="d-flex justify-content-around">
-               <a class="btn btn-primary" href="https://wa.me/595981122452" target="_blank" role="button">Informes y Consultas<br>0981 122 452</a>
-               <a class="btn btn-primary" href="https://wa.me/595984591702" target="_blank" role="button">Postgrado<br>0984 591 702</a>
+            <div class="d-flex flex-column justify-content-around">
+               <a class="btn btn-primary" href="https://wa.me/595981122452" target="_blank" role="button" style="margin: 10px;">Informes y Consultas<br>0981 122 452</a>
+               <a class="btn btn-primary" href="https://wa.me/595984591702" target="_blank" role="button" style="margin: 10px;">Postgrado<br>0984 591 702</a>
            </div> <br>
 
           </div>
@@ -421,13 +420,12 @@
         <div class="section-title">
           <h2>Más</h2>
           <p>Contactos</p>
-        </div>
-        <div class="d-flex justify-content-around">
-          <a class="btn btn-primary" href="https://wa.me/595983348667" target="_blank" role="button">Coordinación SGP<br>0983 348 667</a>
-          <a class="btn btn-primary" href="https://wa.me/595974261064" target="_blank" role="button">Asistente SGP<br>0974 261 064</a>
-          <a class="btn btn-primary" href="https://wa.me/5959956720682" target="_blank" role="button">Asistente SGP <br>0995 672 068</a>
-          <a class="btn btn-primary" href="https://wa.me/595984552943" target="_blank" role="button">Asistente SGP<br>0984 552 943</a>
-          <a class="btn btn-primary" href="https://wa.me/5950991850398" target="_blank" role="button">Facultad de Educación a Distancia y Semipresencial<br>0991 850 398</a>
+          <div class="d-flex flex-column justify-content-around">
+          <a class="btn btn-primary" href="https://wa.me/595983348667" target="_blank" role="button" style="margin: 10px;">Coordinación SGP<br>0983 348 667</a>
+          <a class="btn btn-primary" href="https://wa.me/595974261064" target="_blank" role="button" style="margin: 10px;" >Asistente SGP<br>0974 261 064</a>
+          <a class="btn btn-primary" href="https://wa.me/5959956720682" target="_blank" role="button" style="margin: 10px;" >Asistente SGP <br>0995 672 068</a>
+          <a class="btn btn-primary" href="https://wa.me/595984552943" target="_blank" role="button" style="margin: 10px;" >Asistente SGP<br>0984 552 943</a>
+          <a class="btn btn-primary" href="https://wa.me/5950991850398" target="_blank" role="button" style="margin: 10px;" >Facultad de Educación a Distancia y Semipresencial<br>0991 850 398</a>
           
       </div> 
 
